game over screen plus dynamic fixes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
                 <span id="score-value">0m</span>
             </div>
 
+            <div id="game-over-screen" class="hidden">
+                <div class="glass-panel">
+                    <h1>Game Over</h1>
+                    <p class="score-text">Height Reached</p>
+                    <h2 id="final-score">0m</h2>
+                    <br>
+                    <button id="restart-btn" class="btn-primary">Play Again</button>
+                </div>
+            </div>
+
             <div id="connection-screen">
                 <div class="glass-panel">
                     <h1>Sticky Slime</h1>
