more dynamic layout

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         <div id="start-overlay">
             <button id="enable-sensors-btn">TAP TO START</button>
         </div>
+        <div id="restart-overlay" class="hidden">
+            <button id="phone-restart-btn">PLAY AGAIN</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
